<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_item"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_corner">

            <ImageView
                android:id="@+id/iv_img"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:scaleType="fitXY" />

            <ImageView
                android:id="@+id/iv_up"
                android:layout_width="18dp"
                android:layout_height="13dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/editor_up" />

            <ImageView
                android:id="@+id/iv_down"
                android:layout_width="18dp"
                android:layout_height="13dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/editor_down" />

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:layout_toLeftOf="@id/iv_up"
                android:layout_toRightOf="@id/iv_img"
                android:text="我是文本"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_text"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@id/iv_up"
                android:layout_toRightOf="@id/iv_img"
                android:text="我是链接"
                android:textColor="@color/font_common_1"
                android:visibility="gone" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/iv_delete_item"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/editor_delete" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/editor_list_add"
        android:clickable="true" />

    <LinearLayout
        android:id="@+id/ll_add_item"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@id/rl_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <RelativeLayout
            android:id="@+id/rl_add_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/background_corner"
            android:clickable="true">

            <ImageView
                android:id="@+id/iv_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/editor_add_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_type_text"
                android:layout_centerHorizontal="true"
                android:text="@string/tv_add_text"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_add_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/background_corner"
            android:clickable="true">

            <ImageView
                android:id="@+id/iv_type_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/editor_add_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_type_image"
                android:layout_centerHorizontal="true"
                android:text="@string/tv_add_image"
                android:textSize="12sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_add_link"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/background_corner"
            android:clickable="true">

            <ImageView
                android:id="@+id/iv_type_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/editor_add_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_type_link"
                android:layout_centerHorizontal="true"
                android:text="@string/tv_add_link"
                android:textSize="12sp" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>